make sure layer-info element is full height of layer-main containing element. prevent scrollbar-visible class being added to sidebar when layers are added before height of scroll container is recalculated

--- a/web/css/sidebar-panel.css
+++ b/web/css/sidebar-panel.css
@@ -381,6 +381,7 @@ li.item.productsitem.inmotion,
 .productsitem {
   & .layer-info {
     background-color: #ccc;
+    min-height: 40px;
   }
   & .layer-main {
     width: auto;
